--- a/ISTC.codingschool.OOP.Task/Exemple 2/Exemple 2.csproj
+++ b/ISTC.codingschool.OOP.Task/Exemple 2/Exemple 2.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FolowerUsers.cs" />
+    <Compile Include="GitHubUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
