Staff.am About Company

--- a/ISTC.codingschool.OOP.Staff.am/Staff.am Project/Staff.am Project.csproj
+++ b/ISTC.codingschool.OOP.Staff.am/Staff.am Project/Staff.am Project.csproj
@@ -50,6 +50,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Company.cs" />
+    <Compile Include="GetContent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
